--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,18 @@
 # Site settings
-title: Your name here
-general_email: your_general_email@gmail.com
-academic_email: your_academic_email@univ
+title: Neha Sharma
+academic_email: nehash@wharton.upenn.edu
 
 description: > # this means to ignore newlines until "baseurl:"
-  Give a brief description of yourself, and maybe your passion/interests. It is displayed in search results.
+  I am an Assistant Professor of Operations, Information, and Decisions at The Wharton School, University of Pennsylvania. My research focuses on the design of online marketplaces using data, stochastic models, and game theory. 
 
-baseurl: "/academic-portfolio" # the subpath of your site, e.g. /blog/
+baseurl: # "/academic-portfolio" # the subpath of your site, e.g. /blog/
 
-url: "https://ys1998.github.io" # the base hostname & protocol for your site
+url: "https://neha-sharma-research.github.io"
 
 # twitter_username: jekyllrb
-github_username: github_username
-linkedin_username: linkedin_username
-facebook_username: facebook_username
+github_username: neha-sharma-research
+linkedin_username: neha-sharma-wharton
+# facebook_username: facebook_username
 # feel free to add other links here; you will have to add the SVG icon in _layouts/footer.html
 
 # Build settings
